--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.11.1",
     "gh-pages": "^6.1.1",
     "node": "^22.0.0",
     "nodejs": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
     "sass": "^1.70.0"
   },
   "devDependencies": {
