--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,13 @@
   "name": "persistant",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.ts",
+  "type": "module",
   "scripts": {
-    "test": "node ./index.js",
-    "start": "node ./index.js",
-    "dev": "nodemon ./index.js"
+    "build": "tsc",
+    "test": "node .src//index.ts",
+    "start": "node .src//index.ts",
+    "dev": "nodemon .src//index.ts"
   },
   "author": "Nihal Sheikh",
   "license": "ISC",
@@ -17,6 +19,7 @@
     "typescipt": "^1.0.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.12.12"
   }
 }
