--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "react-google-charts": "^4.0.1",
     "typescript": "^5.4.5",
     "vite": "^5.0.8"
   }
