--- a/server/package.json
+++ b/server/package.json
@@ -2,23 +2,25 @@
   "name": "persistant",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.ts",
+  "main": "./dist/index.js",
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "test": "node .src//index.ts",
-    "start": "node .src//index.ts",
-    "dev": "nodemon .src//index.ts"
+    "test": "node ./dist/index.js",
+    "start": "node ./dist/index.js",
+    "dev": "nodemon ./dist/index.js"
   },
   "author": "Nihal Sheikh",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescipt": "^1.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12"
   }
